$Id$
Version 1.1.2 (?? ??? 2006)
 - Implemented RFE [ 1529290 ] Purge Deleted events
 - Applied PATCH [ 1557394 ] patch for LDAP to use ldap_user_filter for login (updated)
 - Applied PATCH [ 1580572 ] Russian.txt file update (Russian and Russian_utf8)
   (after running tools/update_translation.pl on them).
 - Fixed bug [ 1525230 ] Publish does not work with use_http_auth=true
 - Fixed bug [ 1575484 ] Remote publish/subscribe doesn't authenticate correctly
 - Fixed bug [ 1577365 ] icalclient.php dont work with http auth setting
 - Applied PATCH [ 1445931 ] Put calendar owner's name on browser tab
   modified to check if $APPLICATION_NAME == 'myname'
 - Fixed bug [ 1578910 ] changing 'browser-language' doesn't refresh the 'pull-down'
 - Fixed bug [ 1578686 ] Missing space in SQL in send_reminders.php (CVS)
 - Fixed bug [ 1578146 ] not proper displaying of 'date' and 'time' in view_etnry.php
 - Fixed bug [ 1577999 ] SQL error after patch 1207304
 - Fixed bug [ 1578177 ] Fresh install missed table
 - Applied updated PATCH (bug fix) [ 1536655 ] Use better HTML for Search
 - Applied PATCH [ 1207304 ] Search "phrase"; display keywords in results.
   Cut some dupe code. Lines < 80 chars.
 - Finished Implementing PATCH [ 1536655 ]  Use better HTML for Search
 - Fixed several issues with repeating events using multiple byxxx values
 - Fixed bug [ 1573679 ] 'repeating month per day' will not proper translated
 - Added enddate parameter to function read_repeated_events()
 - Fixed bug [ 1575180 ] Repeating Entries are not longer displayed
 - Fixed bug [ 1574432 ] 'date selectors' missing at the bottom if using UAC
 - Fixed bug [ 1574297 ] meaning of date selector position false
 - Fixed bug [ 1567973 ] UAC settings public access / no edit = no entries?
 - Fixed bug [ 1567901 ] User has no rights to see entry by public
 - Fixed bug [ 1573642 ] detailed view for public access cannot be activated