@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.2 (?? ??? 2006)
+ - Fixed bug [ 1582686 ] installation-wizard didn't start with the proper language
  - Implemented RFE [ 1529290 ] Purge Deleted events
  - Applied PATCH [ 1557394 ] patch for LDAP to use ldap_user_filter for login (updated)
  - Applied PATCH [ 1580572 ] Russian.txt file update (Russian and Russian_utf8)
